Fix: Skill search dropdown overflow fixed

--- a/src/pages/EmployeeForm/style.module.scss
+++ b/src/pages/EmployeeForm/style.module.scss
@@ -6,6 +6,7 @@
   background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 8px;
+  overflow: hidden;
 
   .inputGroup {
     display: flex;
